--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Dino</title>
+    <meta name="description" content="A Chrome Dino game clone built with Phaser 3" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body></body>
